<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">

    <Spinner
        android:id="@+id/spinnerItemCategory"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:hint="@string/please_pick_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:hint="@string/please_enter_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerItemCategory" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="366dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:hint="@string/please_leave_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="370dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:hint="@string/please_enter_the_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNote" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>